Add function examples for temperature conversion and password strength checking

--- a/4-function/function.ipynb
+++ b/4-function/function.ipynb
@@ -121,13 +121,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "e941c628",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello aastha welcome to the paradise\n"
+     ]
+    }
+   ],
+   "source": [
+    "## default parameter\n",
+    "\n",
+    "def greet(name):\n",
+    "    print(f\"hello {name} welcome to the paradise\")\n",
+    "\n",
+    "greet(\"aastha\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "469be760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello guest welcome to the paradise\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name = \"guest\"):\n",
+    "    print(f\"hello {name} welcome to the paradise\")\n",
+    "\n",
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "e0748e44",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## default parameter\n",
-    "\n"
+    "# variable length arguments\n",
+    "\n",
+    "# pasitional and keywords arguments-\n",
+    "\n",
+    "def print_numbers(*args):\n",
+    "    for number in args:\n",
+    "        print(number)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "98d48120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "args\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_numbers(1,2,3,4,\"args\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b32e2f7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## keyword arguments\n",
+    "\n",
+    "def print_details(** kwargs):\n",
+    "    for key,value in kwargs.items():\n",
+    "        print(f\"{key}:{value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7a26381e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name:aastha\n",
+      "age:20\n",
+      "country:india\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_details(name =\"aastha\", age=\"20\",country=\"india\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dfc30932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combind tha both argument\n",
+    "\n",
+    "def print_details(*args,** kwargs):\n",
+    "\n",
+    "    for val in args:\n",
+    "        print(f\" positional argument :{val}\")\n",
+    "\n",
+    "    for key,value in kwargs.items():\n",
+    "        print(f\"{key}:{value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "2f4d52d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " positional argument :1\n",
+      " positional argument :2\n",
+      " positional argument :3\n",
+      " positional argument :4\n",
+      " positional argument :5\n",
+      " positional argument :aastha\n",
+      "name:aastha\n",
+      "age:20\n",
+      "country:india\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_details(1,2,3,4,5,\"aastha\",name =\"aastha\", age=\"20\",country=\"india\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a307cfcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return statenents\n",
+    "\n",
+    "def mul (a,b):\n",
+    "    return a*b\n",
+    "\n",
+    "mul(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "a273faff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 5, 0.6666666666666666, -1)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return multiple statements\n",
+    "\n",
+    "def mul (a,b):\n",
+    "    return a*b,a +b,a/b,a-b\n",
+    "\n",
+    "mul(2,3)\n"
    ]
   }
  ],
