Add Python basics notebooks and file handling examples
- Created rev.ipynb for Python basics covering data types and conversions.
- Added test.ipynb with syntax explanations and conditional statements.
- Introduced variable.ipynb demonstrating variable assignment and dynamic typing.
- Implemented file handling with filepath.ipynb, showcasing directory operations and path manipulations.
- Added destination.txt for file handling examples.

--- a/6-file handling/fileopration.ipynb
+++ b/6-file handling/fileopration.ipynb
@@ -105,14 +105,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8510f609",
    "metadata": {},
    "outputs": [],
    "source": [
     "## binary files\n",
+    "\n",
+    "## write to a binary files\n",
+    "\n",
+    "data=b'\\x00\\x01\\x02\\x03\\x04'\n",
+    "with open('example.bin','wb') as file:\n",
+    "    file.write(data)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "448ba244",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x01\\x02\\x03\\x04'\n"
+     ]
+    }
+   ],
+   "source": [
+    "## read a binary file\n",
+    "\n",
+    "with open('example.bin','rb') as file:\n",
+    "    content=file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3468cb6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## read the content froma saurce text file and write a destination text file \n",
+    "# capying a text file \n",
+    "\n",
+    "with open('example.txt','r') as source_file:\n",
+    "    content = source_file.read()\n",
+    "\n",
+    "with open('destination.txt','w') as destination_file:\n",
+    "    destination_file.write(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ded2c2d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines:3,words:6,characters:37\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Read a text file and count the number of line ,words and characters.\n",
+    "\n",
+    "def count_text_file(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        line = file.readlines()\n",
+    "        line_count = len(lines)\n",
+    "        word_count = sum(len(line.split()) for line in lines )\n",
+    "        char_count = sum(len(line) for line in lines)\n",
+    "    return line_count,word_count,char_count\n",
+    "\n",
+    "file_path = 'example.txt'\n",
+    "lines, words, characters = count_text_file(file_path)\n",
+    "print(f'lines:{lines},words:{words},characters:{characters}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f3476b07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "thid is a new line\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## writing and them reading a file\n",
+    "\n",
+    "with open('example.txt','w+')as file:\n",
+    "    file.write(\"hello world\\n\")\n",
+    "    file.write(\"thid is a new line\\n\")\n",
+    "\n",
+    "    # move the file cursor to the beginning\n",
+    "    file.seek(0)\n",
+    "\n",
+    "    ## read the countent of the file\n",
+    "\n",
+    "    content=file.read()\n",
+    "    print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f5c2eb1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
